# coolify-telegram-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml
.hermes/plans/: coolify-projects-redesign.md
bot/: config.py  main.py  router.py
bot/db/: models.py  repository.py
bot/handlers/: actions.py  apps.py  deploy.py  logs.py  projects.py  servers.py  start.py  subscribe.py  useradmin.py
bot/middleware/: auth.py  ratelimit.py
bot/services/: coolify.py  models.py
bot/utils/: app_resolver.py  cache.py  callback.py  formatting.py  pagination.py  security.py  states.py
