[project]
name = "coolify-telegram-bot"
version = "0.1.0"
description = "Telegram-бот для управления Coolify API"
authors = [{ name = "Avalon", email = "graf4ik322@users.noreply.github.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.18.0",
    "aiohttp>=3.11.0",
    "pydantic-settings>=2.7.0",
    "aiosqlite>=0.20.0",
    "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
